Fix registrar name alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,16 +133,21 @@ body {
 }
 
 .name-and-position{
-  text-align: right;
+  width: 38%;
+  margin-left: auto;
+  padding: 4em 0 4em 0;
   color: #000;
   line-height: 0.2;
-  margin: 4em 4em 4em 0;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 .name-of-registrar{
   text-transform: uppercase;
+  margin: 0 auto;
 }
 .name-of-position{
-  margin-right: 1.85rem;
+  margin: 0 auto;
 }
 
 .lower-text{
